--- a/StardewValleyFishes/Pages/Fishes/List.cshtml
+++ b/StardewValleyFishes/Pages/Fishes/List.cshtml
@@ -6,6 +6,19 @@
 
 <h1>List</h1>
 
+<form method="get">
+    <div class="form-group">
+        <div class="input-group">
+            <input type="search" class="form-control"    asp-for="SearchTerm"      />
+            <span class="input-group-btn">
+                <button class="btn btn-default">
+                    search
+                </button>
+            </span>
+        </div>
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
