Add form with add and edit func

--- a/StardewValleyFishes/Pages/Fishes/List.cshtml
+++ b/StardewValleyFishes/Pages/Fishes/List.cshtml
@@ -43,7 +43,12 @@
                 <a class="btn btn-lg"
                    asp-page="./Detail"
                    asp-route-fishId="@fish.Id">
-                   Detail
+                    Detail
+                </a>
+                <a class="btn btn-lg"
+                   asp-page="./Edit"
+                   asp-route-fishId="@fish.Id">
+                    Edit
                 </a>
             </td>
         </tr>
